// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] layouts/<AdminMain /> should match snapshot 1`] = `
<div>
  <div
    class="Main__Container-q4q6nx-0 kSNCLj css-1usr1wh"
    style="height: 100vh;"
  >
    <div
      class="Main__Body-q4q6nx-1 bSllml css-1gmfemw"
    >
      <div
        class="Header__Container-sc-7cr55z-0 eHuDxq css-s3axrf"
      >
        <div
          class="Header__Brand-sc-7cr55z-1 knuMJV css-zkfaav"
        >
          <img
            alt="Code du travail numérique"
            aria-label="Bouton de retour au tableau de bord"
            class="Header__Logo-sc-7cr55z-2 kAIypM"
            src="/static/images/marianne.svg"
          />
          <div
            class="css-l3rx45"
          >
            <span
              class="Header__Title-sc-7cr55z-3 jGdlvq"
            >
              Code du travail numérique
            </span>
            <span
              class="Header__Subtitle-sc-7cr55z-4 kxPxIS"
            >
              Outil de contribution
            </span>
          </div>
        </div>
      </div>
      <div
        class="Main__Content-q4q6nx-2 iWRxVq css-1kw0tju"
      >
        <div
          class="AdminMenu__Container-t0dk93-0 bMnGdR css-l3rx45"
        >
          <div
            class="AdminMenu__Link-t0dk93-2 LnAQE"
          >
            Tableau de bord
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Conventions
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Étiquettes
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Questions
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Réponses
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Réponses génériques
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Unités
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Utilisateurs
          </div>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Zones
          </div>
          <h2
            class="Subtitle-sc-17ig8qv-0 AdminMenu__Subtitle-t0dk93-1 vshUS"
          >
            Maintenance
          </h2>
          <div
            class="AdminMenu__Link-t0dk93-2 kospmv"
          >
            Migrations
          </div>
        </div>
        <div
          class="AdminMain__Content-lizrru-0 dcXFX"
        >
          Some Content Text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] layouts/<AdminMain /> should match snapshot diff with \`hasBareContent\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,6 +1,6 @@
- <div>
+ <DocumentFragment>
    <div
      class=\\"Main__Container-q4q6nx-0 kSNCLj css-1usr1wh\\"
      style=\\"height: 100vh;\\"
    >
      <div
@@ -94,14 +94,10 @@
              class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
            >
              Migrations
            </div>
          </div>
-         <div
-           class=\\"AdminMain__Content-lizrru-0 dcXFX\\"
-         >
          Some Content Text
        </div>
      </div>
    </div>
-   </div>
- </div>
+ </DocumentFragment>"
`;

exports[`[Contrib] layouts/<AdminMain /> should match snapshot diff with \`isLoading\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,6 +1,6 @@
- <div>
+ <DocumentFragment>
    <div
      class=\\"Main__Container-q4q6nx-0 kSNCLj css-1usr1wh\\"
      style=\\"height: 100vh;\\"
    >
      <div
@@ -33,75 +33,23 @@
              </span>
            </div>
          </div>
        </div>
        <div
-         class=\\"Main__Content-q4q6nx-2 iWRxVq css-1kw0tju\\"
+         class=\\"Main__Content-q4q6nx-2 iWRxVq css-1g1x2nw\\"
        >
          <div
-           class=\\"AdminMenu__Container-t0dk93-0 bMnGdR css-l3rx45\\"
+           class=\\"LoadingSpinner__Container-eu7nmw-0 dEMrTz\\"
          >
            <div
-             class=\\"AdminMenu__Link-t0dk93-2 LnAQE\\"
-           >
-             Tableau de bord
-           </div>
+             class=\\"LoadingSpinner__Spinner-eu7nmw-1 sHZX\\"
+             color=\\"#666666\\"
+           />
            <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Conventions
+             class=\\"LoadingSpinner__Spinner-eu7nmw-1 LoadingSpinner__SpinnerNext-eu7nmw-2 daPQQA\\"
+             color=\\"#666666\\"
+           />
          </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Étiquettes
        </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Questions
      </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Réponses
    </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Réponses génériques
-           </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Unités
-           </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Utilisateurs
-           </div>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Zones
-           </div>
-           <h2
-             class=\\"Subtitle-sc-17ig8qv-0 AdminMenu__Subtitle-t0dk93-1 vshUS\\"
-           >
-             Maintenance
-           </h2>
-           <div
-             class=\\"AdminMenu__Link-t0dk93-2 kospmv\\"
-           >
-             Migrations
-           </div>
-         </div>
-         <div
-           class=\\"AdminMain__Content-lizrru-0 dcXFX\\"
-         >
-           Some Content Text
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+ </DocumentFragment>"
`;
